--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.7.2
   flutter_svg: ^2.1.0
   equatable: ^2.0.7
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
