--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.1.0
   equatable: ^2.0.7
   google_fonts: ^6.2.1
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
