--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
+  firebase_storage: ^12.4.5
 
 dev_dependencies:
   flutter_test:
