--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   firebase_storage: ^12.4.5
+  cloud_firestore: ^5.6.7
 
 dev_dependencies:
   flutter_test:
