--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^5.5.3
   firebase_storage: ^12.4.5
   cloud_firestore: ^5.6.7
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
