--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^12.4.5
   cloud_firestore: ^5.6.7
   shared_preferences: ^2.5.3
+  google_sign_in: ^7.1.1
 
 dev_dependencies:
   flutter_test:
