--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^5.6.7
   shared_preferences: ^2.5.3
   google_sign_in: ^7.1.1
+  sign_in_with_apple: ^7.0.1
 
 dev_dependencies:
   flutter_test:
